--- a/UK-VIRT-FE-PT-11-2022-U-LOLC-main/week-1/02-intro-git-lesson/04-Stu-HTML-CSS-Layout/starter/html-bio-with-css.html
+++ b/UK-VIRT-FE-PT-11-2022-U-LOLC-main/week-1/02-intro-git-lesson/04-Stu-HTML-CSS-Layout/starter/html-bio-with-css.html
@@ -12,20 +12,14 @@
   <header>
     <h1>Student Bio</h1>
   </header>
-
-  <div>
-
-    <section>
-
-      <h2>Pip Allen</h2>
-
-      <img src="https://www.google.co.uk/imgres?imgurl=https%3A%2F%2Fwww.clipartmax.com%2Fpng%2Fsmall%2F0-6210_women-clipart-woman-clip-art-at-clker-vector-clip-art-woman-bathroom.png&imgrefurl=https%3A%2F%2Fwww.clipartmax.com%2Fso%2Fwoman-clipart%2F&tbnid=dyGJ9CdLLGX0-M&vet=12ahUKEwj_p5-LtrP7AhU8hM4BHYgOBq8QMygSegUIARCLAg..i&docid=7uELMby0lYTN4M&w=300&h=597&q=woman%20clipart&hl=en-GB&ved=2ahUKEwj_p5-LtrP7AhU8hM4BHYgOBq8QMygSegUIARCLAg" alt="Anyone">
-
-      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
-    </section>
-
-    <section>
-      <h2>Contact Info</h2>
+  <h2>Pip Allen</h2>
+  <h2>Contact Info</h2>
+  <div class="container">
+    <img id="bio-image" src="bio.jpg" alt="Anyone">
+  <section id="main-bio">
+    <p>Hello my name is pip and I am a Jr Web Developer focusing on design and UX</p>
+  </section>
+  <section id="contact-info">
       <ul>
         <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="#">sampleName</a></li>
